typetools/checker-framework 3.16.0 release (#66)
Co-authored-by: Michael Ernst <mernst@cs.washington.edu>
Co-authored-by: Suzanne Millstein <smillst@cs.washington.edu>
Co-authored-by: Martin Kellogg <kelloggm@cs.washington.edu>
Co-authored-by: Neil Brown <github@twistedsquare.com>
Co-authored-by: Jason Waataja <jwaataja@cs.washington.edu>
Co-authored-by: Manu Sridharan <msridhar@gmail.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: Neil Brown <neil@twistedsquare.com>